--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 /* Master Styles */
 h1 {
-    color: #369;
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 250%;
+    font-size: 300%;
+    text-align: center;
+    background-image: url("/resources/banner.png");
 }
 h2, h3 {
     color: #444;
@@ -10,5 +12,28 @@ h2, h3 {
     font-weight: lighter;
 }
 body {
-    margin: 2em;
+    margin: auto;
+    width: 70%;
+}
+
+.Navigation{
+    display: inline-block;
+    padding: 0;
+    list-style-type: none;
+    margin: 10px;
+    width: 150px;
+    background-color: lightgrey;
+}
+
+#Navigation a{
+    color: black;
+    text-align: center;
+    text-decoration: none;
+}
+
+#Navigation li{
+    padding: 8px;
+    background-color: lightgrey;
+    display: inline;
+    border: none;
 }
