--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 300%;
     text-align: center;
-    background-image: url("/resources/banner.png");
 }
 h2, h3 {
     color: #444;
@@ -16,24 +15,31 @@ body {
     width: 70%;
 }
 
-.Navigation{
-    display: inline-block;
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+#Navigation ul{
     padding: 0;
     list-style-type: none;
-    margin: 10px;
-    width: 150px;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
     background-color: lightgrey;
 }
 
-#Navigation a{
-    color: black;
+#Navigation li a{
+    display: block;
     text-align: center;
     text-decoration: none;
+    padding: 14px 16px;
 }
 
 #Navigation li{
-    padding: 8px;
-    background-color: lightgrey;
-    display: inline;
-    border: none;
+    float: left;
+}
+
+#Navigation li a:hover{
+    background-color: darkslateblue;
 }
